fix: removed whitespaces between icons

--- a/assets/design/helpers.styl
+++ b/assets/design/helpers.styl
@@ -34,3 +34,8 @@ a._beautiful-link
     background-position bottom left, bottom left
     background-size 100% 100%, 0% (2 * $line)
     outline 0
+
+._flex-center
+  display flex
+  align-items center
+  justify-content center
